--- a/Hello Python/templates/ind.html
+++ b/Hello Python/templates/ind.html
@@ -1,35 +1,115 @@
-
-
 {% block content %}
-<h1>{% block title %}  Список хороших людей{% endblock %}</h1>
+<head></head>
+<div class="hui">
+    <h1>{{boss}}</h1>
+
+
     {% for kid in kids %}
-
-<div>
-    <h2>{{kid['surname']}}</h2>
-    <h2 class="tab">{{kid['name']}}</h2>
-    <h2 class="tab">{{kid['points']}}</h2>
-    <br>
-</div>
-    <style>
-        div {
-            display: flex;
-            align-items: column;
-        }
-
-        .tab {
-            margin-left: 1%;
-        }
-    </style>
+    <div class="penis">
+        <h2>{{kid['surname']}}</h2>
+        <h2 class="tab">{{kid['name']}}</h2>
+        <h2 class="tab">{{kid['points']}}</h2>
+        <br>
+    </div>
     {% endfor %}
-<form method="post">
-    <div class="form-group">
-        <label for="title">Title</label>
-        <input type="text" name="title"
-               placeholder="Post title" class="form-control"
-               value="{{ request.form['title'] }}"></input>
-    </div>
-    <div class="form-group">
-        <button type="submit" class="btn btn-primary">+100</button>
-    </div>
-</form>
-    {% endblock %}
+
+    <form method="post">
+        <div class="form-group">
+            <label for="title">Title</label>
+            <input type="text" name="title"
+                   placeholder="Post title" class="form-control"
+                   value="{{ request.form['title'] }}"></input>
+        </div>
+        <div class="form-group">
+            <button type="submit" class="btn btn-primary">+100</button>
+        </div>
+    </form>
+</div>
+<script src="C:/Users/123/source/repos/Hello Python/Hello Python/three.min.js"></script>
+<script src="C:/Users/123/source/repos/Hello Python/Hello Python/GLTFLoader.js"></script>
+<script src="C:/Users/123/source/repos/Hello Python/Hello Python/OrbitControls.js"></script>
+<script>
+    let scene, camera, renderer;
+
+    function init() {
+
+        scene = new THREE.Scene();
+        scene.background = new THREE.Color(0xdddddd);
+
+        camera = new THREE.PerspectiveCamera(40, window.innerWidth / window.innerHeight, 1, 5000);
+        camera.rotation.y = 45 / 180 * Math.PI;
+        camera.position.x = 800;
+        camera.position.y = 100;
+        camera.position.z = 1000;
+
+        controls = new THREE.OrbitControls(camera);
+        controls.addEventListener('change', renderer);
+
+        hlight = new THREE.AmbientLight(0x404040, 100);
+        scene.add(hlight);
+
+        directionalLight = new THREE.DirectionalLight(0xffffff, 100);
+        directionalLight.position.set(0, 1, 0);
+        directionalLight.castShadow = true;
+        scene.add(directionalLight);
+        light = new THREE.PointLight(0xc4c4c4, 10);
+        light.position.set(0, 300, 500);
+        scene.add(light);
+        light2 = new THREE.PointLight(0xc4c4c4, 10);
+        light2.position.set(500, 100, 0);
+        scene.add(light2);
+        light3 = new THREE.PointLight(0xc4c4c4, 10);
+        light3.position.set(0, 100, -500);
+        scene.add(light3);
+        light4 = new THREE.PointLight(0xc4c4c4, 10);
+        light4.position.set(-500, 300, 500);
+        scene.add(light4);
+
+        renderer = new THREE.WebGLRenderer({ antialias: true });
+        renderer.setSize(window.innerWidth, window.innerHeight);
+        document.body.appendChild(renderer.domElement);
+
+        let loader = new THREE.GLTFLoader();
+        loader.load('roof_09_4k.gltf', function (gltf) {
+            car = gltf.scene.children[0];
+            car.scale.set(0.5, 0.5, 0.5);
+            scene.add(gltf.scene);
+            animate();
+        });
+    }
+    function animate() {
+        renderer.render(scene, camera);
+        requestAnimationFrame(animate);
+    }
+    init();
+</script>
+
+<style>
+    body {
+        width: 100vw;
+        height: 100vh;
+        margin: 0;
+        overflow: hidden;
+    }
+    .penis {
+        display: flex;
+        align-items: column;
+    }
+
+    .tab {
+        margin-left: 1%;
+    }
+
+    .hui {
+        position: absolute;
+        width: 1026px;
+        height: 588px;
+        background: #98CFEE;
+        border: 1px solid #D73A3A;
+    }
+</style>
+
+
+
+
+{% endblock %}
