--- a/Hello Python/templates/create.html
+++ b/Hello Python/templates/create.html
@@ -1,22 +1,45 @@
-
 {% block content %}
-<h1>{% block title %} Create kid {% endblock %}</h1>
-
+ <html lang="ru">
+<head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
+    <title>Добавить ребенка</title>
+    <meta charset="utf-8">
+</head>
+<body>
+<h1>{% block title %} Добавить ребенка {% endblock %}</h1>
 <form method="post">
     <div class="form-group">
-        <label for="title">Title</label>
-        <input type="text" name="title"
-               placeholder="Post title" class="form-control"
-               value="{{ request.form['name'] }}"></input>
-    </div>
-
-    <div class="form-group">
-        <label for="content">Content</label>
-        <textarea name="content" placeholder="Post content"
-                  class="form-control">{{ request.form['surname'] }}</textarea>
+        <label style="margin-top: 1%"  for="title">Имя</label>
+        <input style="margin-top: 1%; width: 30%"  type="text" name="title" placeholder="Иван" class="form-control" value="{{ request.form['name'] }}"></input>
     </div>
     <div class="form-group">
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <label style="margin-top: 1%"  for="content">Фамилия</label>
+        <input style="margin-top: 1%; width: 30%" type="text" name="content" placeholder="Платонов" class="form-control">{{ request.form['surname'] }}</input>
+    </div>
+    <div class="form-group">
+        <button style="margin-top: 1%" type="submit" class="btn btn-primary">Добавить ребенка</button>
     </div>
 </form>
+
+
+<style>
+    body
+    {
+        color: #2b255c;
+        margin-top: 2%;
+        font-family: 'Roboto Mono', monospace;
+        font-size: 22px;
+        width: 80%;
+        margin-left: 10%;
+    }
+    .btn-primary
+    {
+       background-color: #2b255c;
+    }
+
+   
+</style>
 {% endblock %}
